- v9.6 config is forever marked as a blacklist.
- Load zfs.ko and opensolaris.ko from loader.
- Add upgrade method from old system.
- Add reload iSCSI target.
- Add graid geom utility.
- Add kern.geom.debugflags when installing.
- Add rpcinfo utility.
- Add vmstat utility.
- Add ability to edit sync property on ZFS dataset and volume.
- Add ability to edit reservation property on ZFS dataset.
- Add ability to edit mountpoint of ZFS pool.
- Add ability to import encrypted disks.
- Add ability to import software raid disks. (except vinum)
- Add ability to import single disks. (detect ZFS/UFS/NTFS only)
- Update mount points after importing disks. (GPT UFS/MBR UFS/GPT NTFS only)
- Add ZFS sparse volume support.
- Add GPT UUID to mount point.
- Add a warning for changing of the disk in config.
- Add force flag to ZFS pool creation.
- Wait response of LAN interface if static with gateway.
- Run umount before iSCSI initiator shutdown.
- Remount all after netif is up for iSCSI device.
- Clear notify after execute now of rsync client/local.
- Increase the number of config backup to 6.
- Confirm permission on temporary directory.
- Remove existing cache and notify at boot.
- Change default AIO size to 4096.
- Change kern.maxfilesperproc to 50000.
- Change default atime of ZFS dataset is on.
- Update SSL certificate and privatekey.
- Add iscsi default values to default config.
- Remove unused hw.ata.to from sysctl.
- Remove AIO disable at boot.
- Add 60days lifetime on ZFS auto snapshot.
- Add ata chipset patch. (VT6420/VT6421)
- Add amdtemp patch.
- Add VM timer workaround.
- Use SCSI inquiry for model and serial.
- Upgrade istgt to 20120901.
- Upgrade isboot to 0.2.6.
- Upgrade zoneinfo to 2012f.
- Upgrade transmission to 2.71.
- Upgrade e2fsprogs to 1.42.6.
- Upgrade php to 5.4.7.
- Upgrade to FreeBSD 9.1-RC2.
- Upgrade msmtp to 1.4.29.

Bug fixes:

- Set default timezone.
- Fix broken modifications.
- Fix wrong mount check.
- Remove extra space.